--- a/oratoriogarelli/package.json
+++ b/oratoriogarelli/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.5",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.435.0",
+    "oratoriogarelli": "file:",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
